--- a/views/bookmarks/new.erb
+++ b/views/bookmarks/new.erb
@@ -1,4 +1,7 @@
 <form action="/bookmarks" method="post" >
-<input type ="text" name="url" />
+url: <input type ="text" name="url" placeholder="URL" />
+<br>
+title: <input type ="text" name="title" placeholder="Title" />
+<br>
 <input type="submit" name="Submit" />
 </form>
